feat: navbar added

--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AMR Porftolio</title>
 
-<html>
-  <head>
-    <title>Sample Web Page</title>
-  </head>
+  <!--font link-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 
-  <body>
-    <h1>This is a heading</h1>
-    <p>This is the first paragraph of text</p>
-    <hr />
-    <p>This is the second paragraph of the text</p>
-  </body>
+  <!-- css file link -->
+  <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+
+  <!-- header section starts -->
+<header>
+  <input type="checkbox" name="" id="toggler">
+  <label for="toggler" class="fas fa-bars"></label>
+
+  <a href="#" class="logo">amr<span>.</span></a>
+    
+  <nav class="navbar">
+    <a href="#about">home</a>
+    <a href="#about">about</a>
+    <a href="#projects">projects</a>
+    <a href="#contact">contacts</a>
+  </nav>
+
+</header>
+  <!-- header section ends -->
+
+  <!-- home section starts -->
+  
+  <!-- home section ends -->
+
+  <!-- about section starts-->
+
+  <!-- about section ends-->
+
+  <!-- projects section starts-->
+
+  <!-- projects section ends-->
+
+  <!-- contacts section starts-->
+
+  <!-- contacts section ends-->
+  
+</body>
 </html>
