feat: home section added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
   <!-- header section ends -->
 
   <!-- home section starts -->
-  
+  <section class="home" id="home">
+    <div class="content">
+      <h3>arianne marie reyes</h3>
+      <span> insert short description/tagline here</span>
+    </div>
+  </section>
   <!-- home section ends -->
 
   <!-- about section starts-->
