feat:about section added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,26 @@
   <!-- home section ends -->
 
   <!-- about section starts-->
+  <section class="about" id="about">
 
+    <h1 class="heading"><span> about </span> me </h1>
+
+    <div class="row">
+
+      <div class="picture-container">
+        <img src="images/about-pic.jpg" alt="Arianne Marie Reyes Photo"> <!--insert about picture here-->
+      </div>
+
+      <div class="content">
+        <h3>know about arianne</h3>
+        <p>insert autobiography infos</p>
+        <p>more deets</p>
+        <a href="#" class="btn" id="about-btn">learn more</a>
+
+      </div>
+
+    </div>
+  </section>
   <!-- about section ends-->
 
   <!-- projects section starts-->
