feat: skills section added

--- a/index.html
+++ b/index.html
@@ -63,8 +63,47 @@
   </section>
   <!-- about section ends-->
 
+  <!-- skills section starts-->
+  <h1 class="heading"><span> Skills </span></h1>
+  <section class="skills-container">
+
+    <div class="icons">
+      <img src="images/python.png" alt=""> <!--insert python logo here-->
+      <div class="info">
+        <h3>python</h3>
+        <span>programming language</span>
+      </div>
+    </div>
+
+    <div class="icons">
+      <img src="images/c.png" alt=""> <!--insert c logo here-->
+      <div class="info">
+        <h3>c</h3>
+        <span>programming language</span>
+      </div>
+    </div>
+
+    <div class="icons">
+      <img src="images/java.png" alt=""> <!--insert java logo here-->
+      <div class="info">
+        <h3>java</h3>
+        <span>programming language</span>
+      </div>
+    </div>
+
+    <div class="icons">
+      <img src="images/r.png" alt=""> <!--insert r logo here-->
+      <div class="info">
+        <h3>r</h3>
+        <span>programming language</span>
+      </div>
+    </div>
+
+  </section>
+  <!-- skills section ends-->
+
   <!-- projects section starts-->
-  
+
   <!-- projects section ends-->
 
   <!-- contacts section starts-->
