feat: projects section added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <a href="#" class="logo">amr<span>.</span></a>
     
   <nav class="navbar">
-    <a href="#about">home</a>
+    <a href="#home">home</a>
     <a href="#about">about</a>
     <a href="#projects">projects</a>
     <a href="#contact">contacts</a>
@@ -55,7 +55,7 @@
         <h3>know about arianne</h3>
         <p>insert autobiography infos</p>
         <p>more deets</p>
-        <a href="#" class="btn" id="about-btn">learn more</a>
+        <a href="#skills-container" class="btn" id="about-btn">learn more</a>
 
       </div>
 
@@ -64,8 +64,8 @@
   <!-- about section ends-->
 
   <!-- skills section starts-->
-  <h1 class="heading"><span> Skills </span></h1>
-  <section class="skills-container">
+  <h1 class="heading"><span> technical </span> skills </h1>
+  <section class="skills-container" id="skills-container">
 
     <div class="icons">
       <img src="images/python.png" alt=""> <!--insert python logo here-->
@@ -101,13 +101,58 @@
 
   </section>
   <!-- skills section ends-->
-
+  
   <!-- projects section starts-->
+  <section class="projects" id="projects">
+    <h1 class="heading"><span> previous </span> projects </h1>
 
+    <div class="row">
+
+      <div class="picture-container">
+        <img src="images/project-jeopardy.jpg" alt="Jeopardy Project"> <!--insert jeopardy picture here-->
+      </div>
+
+      <div class="content">
+        <h3>K-pop Jeopardy</h3>
+        <p>CMSC 12 Project | Python</p>
+
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="picture-container">
+        <img src="images/project-pollution.jpg" alt="City Pollution Reduction Plan Application"> <!--insert reduction plan picture here-->
+      </div>
+
+      <div class="content">
+        <h3>Greenvale Pollution Reduction Plan</h3>
+        <p>CMSC 150 Project | R</p>
+
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="picture-container">
+        <img src="images/project-storefront.jpg" alt="Online Storefront Application"> <!--insert storefront picture here-->
+      </div>
+
+      <div class="content">
+        <h3>Shopper Star Storefront</h3>
+        <p>CMSC 22 Project | Java</p>
+
+      </div>
+
+    </div>
+
+  </section>
   <!-- projects section ends-->
 
   <!-- contacts section starts-->
-
+  
   <!-- contacts section ends-->
   
 </body>
