feat: contacts section and footer added

--- a/index.html
+++ b/index.html
@@ -152,7 +152,33 @@
   <!-- projects section ends-->
 
   <!-- contacts section starts-->
-  
+  <section class="footer">
+    <div class="box-container">
+
+      <div class="box">
+        <h3>quick links</h3>
+        <a href="#home">home</a>
+        <a href="#about">about</a>
+        <a href="#projects">projects</a>
+      </div>
+
+      <div class="box">
+        <h3>follow</h3>
+        <a href="https://www.facebook.com/arianne.marie.reyes/">Facebook</a>
+        <a href="https://www.instagram.com/amr.lens/?hl=en">Instagram</a>
+        <a href="https://x.com/aryann_marie">x</a>
+      </div>
+
+      <div class="box">
+        <h3>contact</h3>
+        <a href="#">+63 912 345 6789</a>
+        <a href="mailto:arreyes14@up.edu.ph">E-mail</a>
+      </div>
+
+    </div>
+
+    <div class="credit">© 2026 <span>arianne marie reyes</span> | all rights reserved</div>
+  </section>
   <!-- contacts section ends-->
   
 </body>
