chore: inserted images and details, and minor adjustments in colors

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <!-- home section starts -->
   <section class="home" id="home">
     <div class="content">
-      <h3>arianne marie reyes</h3>
-      <span> insert short description/tagline here</span>
+      <h3>amr<span>.</span></h3>
+      <span> between the syntax and the shutter.</span>
     </div>
   </section>
   <!-- home section ends -->
@@ -48,13 +48,14 @@
     <div class="row">
 
       <div class="picture-container">
-        <img src="images/about-pic.jpg" alt="Arianne Marie Reyes Photo"> <!--insert about picture here-->
+        <img src="images/about-pic.jpg" alt="Arianne Marie Reyes Photo">
       </div>
 
       <div class="content">
         <h3>know about arianne</h3>
-        <p>insert autobiography infos</p>
-        <p>more deets</p>
+        <p>Hey! I'm Arianne Marie Reyes, a <span>Filipina Computer Science</span> student from the <span>University of the Philippines Los Baños</span>. My academic journey is rooted in solving complex problems, from optimizing data structures to building interactive applications. I always seek the most efficient path from a problem to its solution.</p>
+        <p>Beyond the world of syntax, I am a <span>photographer</span>. This outlet allows me to see the world through different lenses. My background in photography heavily influences my approach to technology.</p>
+        <p>My growth is not limited to the classroom. As a <span>student leader</span> during my high school days, I developed a strong foundation in organizational leadership. From spearheading seminars to managing large-scale events like pageants, I've learned that the best projects require precision, collaboration, and a clear vision.</p>
         <a href="#skills-container" class="btn" id="about-btn">learn more</a>
 
       </div>
@@ -64,40 +65,44 @@
   <!-- about section ends-->
 
   <!-- skills section starts-->
-  <h1 class="heading"><span> technical </span> skills </h1>
   <section class="skills-container" id="skills-container">
+    <h1 class="heading"><span> technical </span> skills </h1>
 
-    <div class="icons">
-      <img src="images/python.png" alt=""> <!--insert python logo here-->
-      <div class="info">
-        <h3>python</h3>
-        <span>programming language</span>
+    <div class="icons-container">
+      <div class="icons">
+        <img src="images/python.png" alt=""> 
+        <div class="info">
+          <h3>python</h3>
+          <span>programming language</span>
+        </div>
       </div>
-    </div>
 
-    <div class="icons">
-      <img src="images/c.png" alt=""> <!--insert c logo here-->
-      <div class="info">
-        <h3>c</h3>
-        <span>programming language</span>
+      <div class="icons">
+        <img src="images/c.png" alt="">
+        <div class="info">
+          <h3>c</h3>
+          <span>programming language</span>
+        </div>
       </div>
-    </div>
 
-    <div class="icons">
-      <img src="images/java.png" alt=""> <!--insert java logo here-->
-      <div class="info">
-        <h3>java</h3>
-        <span>programming language</span>
+      <div class="icons">
+        <img src="images/java.png" alt="">
+        <div class="info">
+          <h3>java</h3>
+          <span>programming language</span>
+        </div>
       </div>
-    </div>
 
-    <div class="icons">
-      <img src="images/r.png" alt=""> <!--insert r logo here-->
-      <div class="info">
-        <h3>r</h3>
-        <span>programming language</span>
+      <div class="icons">
+        <img src="images/r.png" alt="">
+        <div class="info">
+          <h3>r</h3>
+          <span>programming language</span>
+        </div>
       </div>
+
     </div>
+    
 
   </section>
   <!-- skills section ends-->
@@ -109,11 +114,11 @@
     <div class="row">
 
       <div class="picture-container">
-        <img src="images/project-jeopardy.jpg" alt="Jeopardy Project"> <!--insert jeopardy picture here-->
+        <img src="images/project-jeopardy.gif" alt="Jeopardy Project"> <!--insert jeopardy picture here-->
       </div>
 
       <div class="content">
-        <h3>K-pop Jeopardy</h3>
+        <h3>Beyond The Lightstick: K-pop Jeopardy</h3>
         <p>CMSC 12 Project | Python</p>
 
       </div>
@@ -123,7 +128,7 @@
     <div class="row">
 
       <div class="picture-container">
-        <img src="images/project-pollution.jpg" alt="City Pollution Reduction Plan Application"> <!--insert reduction plan picture here-->
+        <img src="images/project-pollution.gif" alt="City Pollution Reduction Plan Application"> <!--insert reduction plan picture here-->
       </div>
 
       <div class="content">
@@ -137,7 +142,7 @@
     <div class="row">
 
       <div class="picture-container">
-        <img src="images/project-storefront.jpg" alt="Online Storefront Application"> <!--insert storefront picture here-->
+        <img src="images/project-storefront.gif" alt="Online Storefront Application"> <!--insert storefront picture here-->
       </div>
 
       <div class="content">
