docs: changed documentation in css and html docs, edited README file

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div class="icons-container">
       <div class="icons">
-        <img src="images/python.png" alt=""> 
+        <img src="images/skills-python.png" alt=""> 
         <div class="info">
           <h3>python</h3>
           <span>programming language</span>
@@ -78,7 +78,7 @@
       </div>
 
       <div class="icons">
-        <img src="images/c.png" alt="">
+        <img src="images/skills-c.png" alt="">
         <div class="info">
           <h3>c</h3>
           <span>programming language</span>
@@ -86,7 +86,7 @@
       </div>
 
       <div class="icons">
-        <img src="images/java.png" alt="">
+        <img src="images/skills-java.png" alt="">
         <div class="info">
           <h3>java</h3>
           <span>programming language</span>
@@ -94,7 +94,7 @@
       </div>
 
       <div class="icons">
-        <img src="images/r.png" alt="">
+        <img src="images/skills-r.png" alt="">
         <div class="info">
           <h3>r</h3>
           <span>programming language</span>
