chore: edited navbar contact to go to contacts section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   <!-- projects section ends-->
 
   <!-- contacts section starts-->
-  <section class="footer">
+  <section class="footer" id="contact">
     <div class="box-container">
 
       <div class="box">
